--- a/public/index.css
+++ b/public/index.css
@@ -15,12 +15,31 @@
   margin: 0;
 }
 
+@media screen and (max-width: 850px) {
+  .nav-links {
+    padding: 12px;
+    justify-content: center;
+  }
+}
+
 .nav-link {
   color: white;
   text-decoration: none;
   border-radius: 18px;
   padding: 6px 24px;
   font-size: 18px;
+}
+
+@media screen and (max-width: 550px) {
+  .nav-link {
+    padding: 6px 12px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .nav-link {
+    font-size: 12px;
+  }
 }
 
 .nav-link-active {
@@ -67,7 +86,7 @@
   font-size: 30px;
   font-weight: bold;
   color: #56009b;
-  margin: 40px 0 35px 0;
+  margin: 40px 10px 35px;
 }
 
 .page img {
@@ -120,8 +139,42 @@ h2 {
   font-weight: bold;
 }
 
+@media screen and (max-width: 700px){
+  .hero-container {
+    height: 200px;
+  }
+
+  h2 {
+    font-size: 32px;
+  }
+}
+
 .nav-logo {
   padding: 18px 60px;
+}
+
+@media screen and (max-width: 450px) {
+  .nav-logo {
+    padding: 5px 10px;
+  }
+
+  .page h3 {
+    font-size: 26px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .hero-container {
+    height: 150px;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+
+  .page h3 {
+    font-size: 18px;
+  }
 }
 
 html,
